force-app/main/default/objects/Credit_Application__c/Credit_Application__c.object-meta.xml
<CustomObject>
    <label>Credit Application</label>
    <nameField>
        <displayFormat>BAFCO-CA-{0000}</displayFormat>
        <label>Credit Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>