force-app/main/default/objects/Credit_Application__c/fields/Expected_Monthly_volume_Imports_Teus__c.field-meta.xml
<CustomField>
    <fullName>Expected_Monthly_volume_Imports_Teus__c</fullName>
    <label>Expected Monthly volume Imports (Teus)</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>