force-app/main/default/objects/Credit_Application__c/fields/Exports_to_Ports__c.field-meta.xml
<CustomField>
    <fullName>Exports_to_Ports__c</fullName>
    <label>Exports to (Ports)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>