force-app/main/default/objects/Credit_Application__c/fields/Imports_From_Ports__c.field-meta.xml
<CustomField>
    <fullName>Imports_From_Ports__c</fullName>
    <label>Imports From (Ports)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>