force-app/main/default/objects/Credit_Application__c/fields/Monthly_volume_Exports_In_Teus__c.field-meta.xml
<CustomField>
    <fullName>Monthly_volume_Exports_In_Teus__c</fullName>
    <label>Monthly volume Exports (In Teus)</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>